[Backend - JDM-Legends-Dealership-Cars] add implementation to display correctly the person who bid